Clone 후 Dockerfile을 실행해 Image 를 Local Hub에 올라가는 것 까지 확인 아직 숙제로 남은 부분 * 정상 동작 시 Docker 의 진행상태를 추적하지 못해 REST API 요청이 정상적으로 종료되지 않음 * DockerFile의 규격화, 특히 Gradle build 가 어려움